Update `Form`, `Input` components and stylesheet module

--- a/src/styles/Styles.module.css
+++ b/src/styles/Styles.module.css
@@ -338,6 +338,7 @@
       background: none;
       color: currentcolor;
       font: inherit;
+      line-height: normal;
       letter-spacing: inherit;
 
       &::placeholder {
